PROD_10-24-19/force-app/main/default/objects/Trigger_Rollup_Rule__c/Trigger_Rollup_Rule__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Trigger Rollup Rule</label>
</CustomObject>