PROD_10-24-19/force-app/main/default/objects/Trigger_Rollup_Rule__c/fields/Child_Parent_ID_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Parent_ID_Field__c</fullName>
    <label>Child Parent ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>