PROD_10-24-19/force-app/main/default/objects/Trigger_Rollup_Rule__c/fields/Child_Query_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Child_Query_Where_Clause__c</fullName>
    <label>Child Query Where Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>