PROD_10-24-19/force-app/main/default/objects/Trigger_Rollup_Rule__c/fields/Exclude_Nulls__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Nulls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Nulls</label>
    <type>Checkbox</type>
</CustomField>