PROD_10-24-19/force-app/main/default/objects/Trigger_Rollup_Rule__c/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Child_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>